1_cloud_infrastructure/eks_deployment/deployments/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: ${cluster_namespace}
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
